doc updates; fix test