@@ -53,7 +53,7 @@ git checkout master
 When done, you may build the codebase via the following command:
 
 ```bash
-./gradlew build install --parallel -x test -x javadoc -x check --build-cache --configure-on-demand
+./gradlew build --parallel -x test -x javadoc -x check --build-cache --configure-on-demand
 ```
 
 The following commandline boolean flags are supported by the build and can be passed in form of system properties via `-D`:
@@ -107,11 +107,6 @@ Additionally, you may need to customize the VM settings to ensure the developmen
 -XX:+UseCompressedOops
 -XX:SoftRefLRUPolicyMSPerMB=50
 
--XX:+UseParNewGC
--XX:ParallelGCThreads=4
--XX:+UseConcMarkSweepGC
--XX:ConcGCThreads=4
-
 -XX:+CMSClassUnloadingEnabled
 -XX:+CMSParallelRemarkEnabled
 -XX:CMSInitiatingOccupancyFraction=65
@@ -141,7 +136,8 @@ The following plugins may prove useful during development:
 - [FindBugs](https://plugins.jetbrains.com/plugin/3847-findbugs-idea)
 - [Lombok](https://github.com/mplushnikov/lombok-intellij-plugin)
 
-Once you have installed the Lombok plugin, you will also need to ensure Annotation Processing is turned on. You may need to restart IDEA in order for changes to take full effect.
+Once you have installed the Lombok plugin, you will also need to ensure *Annotation Processing* is turned on. You may 
+need to restart IDEA in order for changes to take full effect.
 
 ![image](https://user-images.githubusercontent.com/1205228/35231112-287f625a-ffad-11e7-8c1a-af23ff33918d.png)
 
@@ -185,7 +181,8 @@ Please [see this page](Test-Process.html) to learn more about the testing proces
 ## Embedded Containers
 
 The CAS project comes with a number of built-in modules that are pre-configured with embedded servlet containers such as 
-Apache Tomcat, Jetty, etc for the server web application, the management web application and others. These modules are found in the `webapp` folder of the CAS project.
+Apache Tomcat, Jetty, etc for the server web application, the management web application 
+and others. These modules are found in the `webapp` folder of the CAS project.
 
 ### Configure SSL
 
@@ -260,7 +257,7 @@ The response will look something like this:
 
 ```bash
 ...
-2017-05-26 19:10:46,470 INFO [org.apereo.cas.web.CasWebApplication] - <Started CasWebApplication in 21.893 seconds (JVM running for 36.888)>
+INFO [org.apereo.cas.web.CasWebApplication] - <Started CasWebApplication in 21.893 seconds (JVM running for 36.888)>
 ...
 ```
 
